# ZENITH

./: .env.example  Anchor.toml  README-ZENITH.md  README.md  dapp-enhanced.html  database.js  index.html  package-lock.json  package.json  portfolio-projects.json  server.js  style.css  wallet.js  zenith-complete.html  zenith-fixed.html  zenith-functional.html  zenith-online.html  zenith-ultimate.html
backend/: .env.example  README.md  ipfs-manager.js  package.json  server-simple.js  server.js
chrome-extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
chrome-extension/icons/: README.md
js-portfolio/: advanced-interactions.js  defi-features.js  notifications.js  performance-monitor.js  portfolio-dynamic.js  shop-renderer.js
programs/zenith-vault/: Cargo.toml  lib.rs
public/: ai-responses.js  destructive-mode.js  docs.css  docs.html  docs.js  index-gh-pages.html  index.html  manifest.json  script-broken.js  script-clean.js  style.css  sw.js  zenith-max.html  zenith-pro.html
